@@ -42,7 +42,7 @@ UPDATE Language_en_US SET Text = Text||'[NEWLINE][NEWLINE]Nearby [ICON_RES_TORTO
 -- Giant Tortoise - added by Galapagos NW
 --=====================================================--
 INSERT INTO Resources 
-			(Type,						TechReveal,			TechCityTrade, 		Description,						Civilopedia, 							Help,										ResourceClassType, 			IsMonopoly, 	ArtDefineTag, 						CivilizationType,		OnlyMinorCivs,  Happiness,  ResourceUsage,	SeaResource,	AnimalResource,	PlantResouce,	RockResource,	IconString, 				PortraitIndex, 	IconAtlas)
+			(Type,						TechReveal,			TechCityTrade, 		Description,						Civilopedia, 							Help,										ResourceClassType, 			IsMonopoly, 	ArtDefineTag, 						CivilizationType,		OnlyMinorCivs,  Happiness,  ResourceUsage,	SeaResource,	AnimalResource,	PlantResource,	RockResource,	IconString, 				PortraitIndex, 	IconAtlas)
 VALUES		('RESOURCE_TERN',			null,				'TECH_PHYSICS',		'TXT_KEY_RESOURCE_TERN',			'TXT_KEY_RESOURCE_TERN_TEXT',			'TXT_KEY_RESOURCE_TERN_MONOPOLY',			'RESOURCECLASS_LUXURY',		1,				'ART_DEF_RESOURCE_TERN',			null,					0,				2,			2,				0,				1,				0,				0,				'[ICON_RES_TERN]',			0, 				'RESOURCE_MORE_WONDERS_ATLAS'),
 			('RESOURCE_SYLVITE',		null,				'TECH_MINING',		'TXT_KEY_RESOURCE_SYLVITE',			'TXT_KEY_RESOURCE_SYLVITE_TEXT',		'TXT_KEY_RESOURCE_SYLVITE_MONOPOLY',		'RESOURCECLASS_LUXURY',		1,				'ART_DEF_RESOURCE_SYLVITE',			null,					0,				2,			2,				0,				0,				0,				1,				'[ICON_RES_SYLVITE]',		1, 				'RESOURCE_MORE_WONDERS_ATLAS'),
 			('RESOURCE_TROPICAL_FISH',	'TECH_SAILING',		'TECH_SAILING',		'TXT_KEY_RESOURCE_TROPICAL_FISH',	'TXT_KEY_RESOURCE_TROPICAL_FISH_TEXT',	'TXT_KEY_RESOURCE_TROPICAL_FISH_MONOPOLY',	'RESOURCECLASS_BONUS',		0,				'ART_DEF_RESOURCE_TROPICAL_FISH',	null,					0,				0,			0,				1,				1,				0,				0,				'[ICON_RES_TROPICAL_FISH]',	2, 				'RESOURCE_MORE_WONDERS_ATLAS'),
